Fix broken layout

--- a/packages/create-react/src/index.css
+++ b/packages/create-react/src/index.css
@@ -239,6 +239,7 @@ body {
 
 .map {
   position: relative;
+  overflow: hidden;
 }
 
 .map-footer {
